--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,5 @@
 // Variables
+@import url('https://fonts.googleapis.com/css?family=Lora|Merriweather|Merriweather+Sans&display=swap');
 
 // Gray and Brand Colors for use across theme
 
@@ -29,3 +30,6 @@ $font-robotomono: 'Roboto Mono';
 $font-opensans: 'Open Sans', sans-serif;
 $font-knewave: 'Knewave', cursive;
 $font-nunito: 'Nunito', sans-serif;
+$font-lora: 'Lora', serif;
+$font-merriweather: 'Merriweather', serif;
+$font-merriweathersans: 'Merriweather Sans', sans-serif;
